Meal entry timestamp padding
- Clean up padding for meal entry timestamp
- Reduce it from 4 to 0 for the right edge
- Better matches text in other fields

--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -1042,7 +1042,7 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6E1-G2-TEA">
-                                                    <rect key="frame" x="12" y="4" width="319" height="32.333333333333336"/>
+                                                    <rect key="frame" x="12" y="4" width="323" height="32.333333333333336"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⌚️Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOr-rb-iTM">
                                                             <rect key="frame" x="0.0" y="0.0" width="120" height="32.333333333333336"/>
@@ -1054,7 +1054,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <datePicker contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="7FO-85-4bA">
-                                                            <rect key="frame" x="120" y="0.0" width="199" height="32.333333333333336"/>
+                                                            <rect key="frame" x="120" y="0.0" width="203" height="32.333333333333336"/>
                                                         </datePicker>
                                                     </subviews>
                                                 </stackView>
@@ -1063,7 +1063,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="6E1-G2-TEA" secondAttribute="bottom" constant="4" id="2ez-fx-OrP"/>
                                                 <constraint firstItem="6E1-G2-TEA" firstAttribute="leading" secondItem="qGb-JL-JA0" secondAttribute="leadingMargin" constant="4" id="F8L-yM-1so"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="6E1-G2-TEA" secondAttribute="trailing" constant="4" id="KKY-iB-vVT"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="6E1-G2-TEA" secondAttribute="trailing" id="KKY-iB-vVT"/>
                                                 <constraint firstItem="6E1-G2-TEA" firstAttribute="top" secondItem="qGb-JL-JA0" secondAttribute="top" constant="4" id="Of2-AW-zGm"/>
                                             </constraints>
                                         </view>
